fix(form-requirement): fixed invalidtext overlapping components below

--- a/packages/styles/scss/components/text-area/_text-area.scss
+++ b/packages/styles/scss/components/text-area/_text-area.scss
@@ -106,7 +106,6 @@
   }
 
   .#{$prefix}--form-item {
-    position: relative;
     &:has(.#{$prefix}--text-area__wrapper--cols) {
       inline-size: fit-content;
     }
@@ -248,7 +247,12 @@
     justify-content: space-between;
     inline-size: 100%;
   }
-  .#{$prefix}--form-requirement {
+
+  .#{$prefix}--form-item:has(.#{$prefix}--text-area) {
+    position: relative;
+  }
+
+  .#{$prefix}--text-area__wrapper + .#{$prefix}--form-requirement {
     position: absolute;
     inset-block-start: 100%;
   }
